--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         python setup.py sdist bdist_wheel
     - name: finiding the wheel's version
       run: |
-        output=$(source/wheel_version.py)
+        output=$(python source/wheel_version.py)
         ::set-output name=version::$output
         id: wheel_version_name
     - name: upload artifact 
