--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
         git config --local user.email "noa.kfir@aquant.io"
         git config --local user.name "noakfir"
         git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/noakfir/output/local_wheels
-        git add .
-        git commit -m "Add changes" --local_wheels
+        git add .\local_wheels
+        git commit -m "Add changes" 
         git push
