--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
         git config --local user.name "noakfir"
         git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/noakfir/output/local_wheels
         git fetch
+        cd local_wheels
+        git sparse-checkout set local_wheels
         git add .
         git commit -m "Add changes" 
         git push
