--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
     - name: download artifact
       uses: actions/download-artifact@v3
       with:
-        name: my-artifact
+        name: wheel ${{ steps.wheel_version_name.outputs.version }}
         path: output/local wheels
     
     - name: Display structure of downloaded files
