--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
      workflow_dispatch:
 jobs:
       
-  build_and_publish:
+  build_and_upload:
     
     runs-on: ubuntu-latest
     
@@ -32,7 +32,8 @@ jobs:
         name: wheel ${{ steps.wheel_version_name.outputs.version }}
         path: dist/insightsprocessor-${{ steps.wheel_version_name.outputs.version }}-py3-none-any.whl
 
-  checkout_and_push:  
+  checkout_and_push: 
+    needs: build_and_upload
 
     runs-on: ubuntu-latest
 
