--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,8 +70,8 @@ jobs:
         git config --local user.email "noa.kfir@aquant.io"
         git config --local user.name "noakfir"
         git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/noakfir/output
+        git fetch
         cd local_wheels
-        git sparse-checkout set local_wheels
         git add .
         git commit -m"try"
         git push --force
