--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,8 @@ jobs:
       run: |
         git config --local user.email "noa.kfir@aquant.io"
         git config --local user.name "noakfir"
+        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/noakfir/output
         git fetch
-        git status
         git add .
-        git status
         git commit -m"try"
         git push 
