--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
   build_and_upload:
     
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.wheel_version_name.outputs.version }}
     
     steps:
     - uses: actions/checkout@v3
@@ -60,8 +62,8 @@ jobs:
     
     - name: update the requirements 
       run: |
-          echo "Store: ${{ needs.build_and_upload.steps.wheel_version_name.outputs.version }}"
-          INPUT_STORE=${{ needs.build_and_upload.steps.wheel_version_name.outputs.version }} python3 update_requirements.py
+          echo "Store: ${{ needs.build_and_upload.outputs.output1 }}"
+          INPUT_STORE=${{ needs.build_and_upload.outputs.output1 }} python3 update_requirements.py
  
     - name: upload artifact 
       uses: actions/upload-artifact@v2
